<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFCer</string>
    
    <string name="action_info">Info</string>
    <string name="action_write">Write Tag</string>
    <string name="action_read">Read Tag</string>
    
    <string name="action_info_text">Developed by vicmonmena</string>
    
    <string name="error_nfc_not_available">NFC not available</string>
    <string name="error_tag">Tag not found! Try to move the tag closer to the smartphone again</string>
    <string name="msg_tag_written">was written successfully!</string>
    
    <!-- Main screen -->
    <string name="options_title">What do you want to do?</string>
    <string name="nfc_option_text">Write a text</string>
    <string name="nfc_option_text_hint">&#8230;</string>
    <string name="nfc_option_uri">Write an URI</string>
    <string name="nfc_option_uri_hint">&#8230;</string>
    
    
    <!-- Write tag screen -->
    <string name="write_tag_info">Close a NFC tag to your smartphone, input a text and do click on "Write".</string>
    <string name="write_tag_title">Input your text in the field and click on Write!</string>
    <string name="nfc_write_hint">Input your text here</string>
    <string name="button_write">Write!</string>
    
    <string name="write_tag_validation">Please input text to write!</string>
    <string name="custom_write_dialog_title">Input your text or URI here</string>
    <string name="custom_write_dialog_button">Back</string>
    
    <!-- Read tag screen -->
    <string name="read_tag_info">Move the tag closer to your smartphone in order to read the tag content</string>
    <string name="read_tag_title">Move the tag closer to your smartphone</string>
    
    <string name="nfc_tag_technology_lbl">Supported technologies</string>
    <string name="nfc_tag_type_lbl">Tag data format</string>
    <string name="nfc_tag_content_lbl">Tag content</string>
    
    <string name="nfc_tag_technology_hint">Technology</string>
    <string name="nfc_tag_type_hint">Data format</string>
    <string name="nfc_tag_content_hint">Content</string>
</resources>
