<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@android:color/darker_gray"
    tools:context=".MainActivity" >
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_tag_title" 
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_shape"/>
    
    <LinearLayout 
	    android:id="@+id/LinearLayout2"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="@drawable/custom_shape">
	    
        <TextView
            android:id="@+id/nfcTagTechnologyLbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_nfc_technologies"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/nfc_tag_technology_lbl"
            android:textSize="20sp" />

	    <TextView
	        android:id="@+id/nfcTagTechnologyText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:padding="5dp"
	        android:gravity="center_vertical"
	        android:textSize="16sp"
	        android:hint="@string/nfc_tag_technology_hint"/>

        <View
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:background="#DF013A"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"/>

	   <TextView
	       android:id="@+id/nfcTagTypeLbl"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:layout_marginTop="10dp"
	       android:drawableLeft="@drawable/ic_nfc_data_format"
	       android:gravity="center_vertical"
	       android:padding="5dp"
	       android:text="@string/nfc_tag_type_lbl"
	       android:textSize="20sp" />

	    <TextView
	        android:id="@+id/nfcTagTypeText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:padding="5dp"
	        android:gravity="center_vertical"
	        android:textSize="16sp"
	        android:hint="@string/nfc_tag_type_hint"
	        android:linksClickable="true"
	        android:autoLink="web|email"/>
	    
	    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#DF013A"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
	    
	    <TextView
           android:id="@+id/nfcTagContentLbl"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:drawableLeft="@drawable/ic_nfc_tag_content"
           android:gravity="center_vertical"
           android:padding="5dp"
           android:text="@string/nfc_tag_content_lbl"
           android:textSize="20sp" />

        <TextView
            android:id="@+id/nfcTagContentText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:hint="@string/nfc_tag_content_hint"
            android:linksClickable="true"
            android:autoLink="web|email"/>
    </LinearLayout>
</LinearLayout>
